# suarasemar

./: .gitignore  README.md  pyproject.toml
backend/: README.md  config.py  main.py
backend/routes/: websocket.py
backend/services/: __init__.py  microphone.py  transcriber.py
backend/tests/: test_transcriber.py
config/: suarasemar.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AssistantOrb.tsx  BackgroundStars.tsx  ChatInterface.tsx  PreferencesModal.tsx  SessionManager.tsx  Sidebar.tsx
frontend/src/services/: audio.ts  websocket.ts
frontend/src/utils/: hooks.ts
