[project]
name = "suarasemar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-cloud-dialogflow>=2.41.2",
    "numpy>=2.3.0",
    "scipy>=1.15.3",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.2",
]
